--- a/WebContent/cadastrarCliente.html
+++ b/WebContent/cadastrarCliente.html
@@ -19,7 +19,7 @@
                 <nav class="navbar navbar-inverse">
                     <div class="container-fluid">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="#">AppBuffet</a>
+                            <a class="navbar-brand" href="#">AppBuffet xD</a>
                         </div>                
                         <ul class="nav navbar-nav" id="usuario-on">
                             <li><span class="glyphicon glyphicon-user cinza" aria-hidden="true"></span></li>
@@ -64,7 +64,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div>	
                 </div>
             </nav>
             
@@ -140,6 +140,7 @@
         <script src="./static/js/controllers/Clientes.js"></script>
         <script>
         	var clientes = new Clientes();
+        	console.log("oi");
         </script>
         <script src="./static/plugins/bootstrap3/js/bootstrap.min.js"></script>
     </body>
