--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
         	
             <form method="POST" onsubmit="autenticaLogin.autentica(event)">              
                 <div class="form-group">
-                    <label for="input-email">Email</label>
+                    <label id="idEmail" for="input-email">Email</label>
                     <input type="email"	name="email" class="form-control" id="input-email" aria-describedby="emailHelp" placeholder="Email">
                         <small	id="emailHelp" class="form-text text-muted"> Não compartilhe sua senha com outras pessoas.</small>
                 </div>
